add react version detection for lint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,5 +26,10 @@
     "max-len": ["warn", { "code": 80 }],
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn"
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
